--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -30,6 +30,9 @@
               i.caret
             ul.dropdown-menu
               li
+                a(href='/kick/new') Create a new kick-in
+              li.divider
+              li
                 a(href='/account') My Account
               li.divider
               li
