--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -31,6 +31,8 @@
             ul.dropdown-menu
               li
                 a(href='/kick/new') Create a new kick-in
+              li
+                a(href='/kick') View your kick-ins
               li.divider
               li
                 a(href='/account') My Account
