new kicks stuff

--- a/views/kick/new.jade
+++ b/views/kick/new.jade
@@ -12,7 +12,7 @@ block content
     .form-group
       label.col-sm-3.control-label(for='end_date') End date
       .col-sm-7
-        input.form-control(class='datepicker', name='end-date', id='end-data', placeholder='End date', required)
+        input.form-control(class='datepicker', name='end_date', id='end_date', placeholder='End date', required)
     .form-group
       .col-sm-offset-3.col-sm-7
         button.btn.btn-success(type='submit')
