--- a/views/kick/home.jade
+++ b/views/kick/home.jade
@@ -3,3 +3,8 @@ extends ../layout
 block content
   .page-header
     h3 Kick-ins
+    
+    ul
+      each val in events.length ? events : ['There are no values']
+        li
+          a(href='/kick/view/#{val._id}') #{val.name}
