--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
     link(rel='stylesheet', href='/css/bootstrap-datepicker3.css')
+    link(rel='stylesheet', href='/css/myMain.css')
 
   body
     include partials/header
