--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -30,9 +30,9 @@
               i.caret
             ul.dropdown-menu
               li
-                a(href='/kick/new') Create a new kick-in
+                a(href='/kick/new') Create a new chip-in
               li
-                a(href='/kick') View your kick-ins
+                a(href='/kick') View your chip-ins
               li.divider
               li
                 a(href='/account') My Account
