--- a/views/home.jade
+++ b/views/home.jade
@@ -1,5 +1,28 @@
 extends layout
 
 block content
-  div(id='bg')
-    p aaaaaaaaaaaa
+  div(id='bg', style='color:white')
+    center
+      br
+      br
+      br
+      br
+      br
+      br
+      p(style='font-size:48px') Discover how easy it is to Chip-In©®™ for a group expense! 
+    br
+    br
+    br
+    br
+    br
+    a(href='/kick/new')
+      button(style='font-size:32px;color:black') Create a Chip-In™ now
+    br
+    br
+    br
+    ul(style='list-style-type:none')
+      li(style='font-size:18px') ... for a friend's birthday gift
+      li(style='font-size:18px') ... for your train tickets if you travel as a group
+      li(style='font-size:18px') ... for your housewarming party snacks and drinks
+      li(style='font-size:18px') ... for your next pub crawl (18+)
+      li(style='font-size:18px') ... for any other group payments!
