last working version

--- a/views/home.jade
+++ b/views/home.jade
@@ -9,14 +9,14 @@ block content
       br
       br
       br
-      p(style='font-size:48px') Discover how easy it is to Chip-In©®™ for a group expense! 
+      p(style='font-size:48px') Discover how easy it is to Chip-In for a group expense! 
     br
     br
     br
     br
     br
     a(href='/kick/new')
-      button(style='font-size:32px;color:black') Create a Chip-In™ now
+      button(style='font-size:32px;color:black') Create a Chip-In now
     br
     br
     br
