--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -7,8 +7,7 @@
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-        i.fa.fa-cube
-        | Chip-In
+        img(src='/img/logo.jpg', width='32px', height='32px', style='margin-top:-5px;')
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=(title == 'Home') ? 'active' : undefined)
