--- a/public/css/site.css
+++ b/public/css/site.css
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 80px; 
+  margin-top: 50px;
+  padding: 80px;
   background-image: url(/img/bg.jpg);
   background-size: cover;
 }
