removed a bit of text

--- a/views/home.jade
+++ b/views/home.jade
@@ -23,5 +23,5 @@ block content
       li(style='font-size:18px') ... for a friend's birthday gift
       li(style='font-size:18px') ... for your train tickets if you travel as a group
       li(style='font-size:18px') ... for your housewarming party snacks and drinks
-      li(style='font-size:18px') ... for your next pub crawl (18+)
+      li(style='font-size:18px') ... for your next pub crawl
       li(style='font-size:18px') ... for any other group payments!
